--- a/app/src/main/res/layout/activity_quiz_true_false.xml
+++ b/app/src/main/res/layout/activity_quiz_true_false.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:background="#FFF"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loadingAnimation"
