--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,5 +9,12 @@
         <item name="colorPrimaryDark">@android:color/white</item>
     </style>
 
+    <style name="Theme.CustomSplashScreenTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
+        <item name="windowSplashScreenAnimationDuration">3000</item>
+        <item name="postSplashScreenTheme">@style/Theme.QuizzPartner</item>
+    </style>
+
     <style name="Theme.QuizzPartner" parent="Base.Theme.QuizzPartner" />
 </resources>
