--- a/app/src/main/res/layout/activity_quiz_category.xml
+++ b/app/src/main/res/layout/activity_quiz_category.xml
@@ -198,6 +198,7 @@
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
                 android:text="@string/label_ayat_penting"
+                android:backgroundTint="@color/white"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:id="@+id/btnAyatPenting" />
@@ -210,6 +211,7 @@
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
                 android:text="@string/label_tokoh_alkitab"
+                android:backgroundTint="@color/white"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:id="@+id/btnTokohAlkitab" />
@@ -250,6 +252,7 @@
                 android:text="10"
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
+                android:backgroundTint="@color/white"
                 app:strokeColor="@color/black"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -263,6 +266,7 @@
                 android:text="20"
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
+                android:backgroundTint="@color/white"
                 app:strokeColor="@color/black"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -276,6 +280,7 @@
                 android:text="30"
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
+                android:backgroundTint="@color/white"
                 app:strokeColor="@color/black"
                 android:textColor="@color/black"
                 android:textStyle="bold"
