--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,4 +94,5 @@
     <color name="deep_orange">#FF5722</color>
     <color name="brown">#795548</color>
     <color name="blue_gray">#607D8B</color>
+    <color name="purple_2">#592A8A</color>
 </resources>
