--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -13,7 +13,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" />
             <corners android:radius="12dp" />
-            <stroke android:width="1dp" android:color="@color/black" />
+            <stroke android:width="1dp" android:color="@color/purple_2" />
         </shape>
     </item>
 </selector>
