--- a/app/src/main/res/layout/activity_quiz_multiple_choice.xml
+++ b/app/src/main/res/layout/activity_quiz_multiple_choice.xml
@@ -38,7 +38,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#592A8A"
+        android:background="@color/purple_2"
         android:paddingVertical="30dp"
         android:paddingHorizontal="16dp">
         <!-- Close Button -->
@@ -126,18 +126,36 @@
         </RelativeLayout>
         <!-- Progress Circular -->
 
-        <!-- Question Image -->
-        <ImageView
-            android:id="@+id/questionImage"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ayat_alkitab"
-            android:background="@drawable/rounded_corners"
+        <androidx.cardview.widget.CardView
             app:layout_constraintTop_toBottomOf="@id/layoutCountdownTimer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+            android:id="@+id/rlImageTitle"
+            android:background="@drawable/rounded_button"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/imgQuestionCover"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ayat_alkitab"
+                android:background="@drawable/rounded_corners"/>
+            <TextView
+                android:id="@+id/tvTopic"
+                android:paddingHorizontal="15dp"
+                android:textStyle="bold"
+                android:paddingVertical="3dp"
+                android:background="@drawable/rounded_button_purple"
+                android:layout_margin="10dp"
+                android:textColor="@color/white"
+                android:text="test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.cardview.widget.CardView>
+        <!-- Question Image -->
 
         <!-- Question Count -->
         <TextView
@@ -147,7 +165,7 @@
             android:text="Question 12 of 20"
             android:textColor="#fff"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/questionImage"
+            app:layout_constraintTop_toBottomOf="@id/rlImageTitle"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="16dp" />
 
