--- a/app/src/main/res/drawable/rounded_button_purple.xml
+++ b/app/src/main/res/drawable/rounded_button_purple.xml
@@ -2,9 +2,9 @@
     <!-- Default state -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_2" />
+            <solid android:color="@color/brown" />
             <corners android:radius="12dp" />
-            <stroke android:width="1dp" android:color="@color/deep_purple" />
+            <stroke android:width="1dp" android:color="@color/levelBronze" />
         </shape>
     </item>
 </selector>
