--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,19 +14,17 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:src="@drawable/ic_logo"
-                android:layout_width="65dp"
-                android:layout_height="65dp" />
             <TextView
                 android:textColor="@color/brown"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                android:text="@string/app_name"
+                android:gravity="center_horizontal"
+                android:text="PILIH TANTANGAN QUIZ YANG KAMU SUKA!"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"></TextView>
         </LinearLayout>
@@ -52,7 +50,7 @@
                     android:textSize="14sp" />
                 <TextView
                     android:textStyle="bold"
-                    android:text="EASY LEVEL"
+                    android:text="LEVEL MUDAH"
                     android:textSize="18dp"
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -85,7 +83,7 @@
                     android:textSize="14sp" />
                 <TextView
                     android:textStyle="bold"
-                    android:text="MEDIUM LEVEL"
+                    android:text="LEVEL MENENGAH"
                     android:textSize="18dp"
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
@@ -118,7 +116,7 @@
                     android:textSize="14sp" />
                 <TextView
                     android:textStyle="bold"
-                    android:text="HARD LEVEL"
+                    android:text="LEVEL SUSAH"
                     android:textSize="18dp"
                     android:textColor="@color/black"
                     android:layout_width="match_parent"
